--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -29,7 +29,7 @@ $bodoni: "Bodoni MT", serif !default;
 $calisto: "Calisto MT", serif !default;
 $garamond: Garamond, serif !default;
 
-$global-font-family: 'Roboto', sans-serif;
+$global-font-family: 'Times New Roman', sans-serif;
 $header-font-family: $sans-serif !default;
 $caption-font-family: $serif !default;
 
